# Notes

./: .gitignore  .md  CLAUDE.md  skills-lock.json  植树问题.md  笔记改进清单.md
.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins.json  core-plugins.json  daily-notes.json  graph.json  hotkeys.json  types.json  workspace-mobile.json  workspace.json  workspaces.json
000Inbox/: Homepage.md  repo 切换 manifest 文件.md  二阶导数的形式.md  微分形式不变性.md  拉普拉斯算子.md  最接近 n 且能被 m 整除的数.md  梯度.md  矢量分析.md
000零碎记录/: Coroutine 协程.md  MVC 模式.md  Mac OS 和 gcc gdb 存在兼容性问题.md  Promise 模型.md  miniob 存储格式- OLTP & OLAP.md  vcpkg.md  使用 clang-format 时如何批量format 整个项目的代码.md  先记了再说.md  关闭 tmux 后再打开，原来的变量还是存在.md  苹果 M 系列芯片可以使用  x86-64   的软件.md  阅读开源库可以从测试用例入手.md
100Computer/: CompSolid 为什么不能被视作一个 Solid.md  TopShape拓扑层次.md
100Cpp/: Aggregate initialization.md  C 可变参数—— printf 实现解析.md  C++ 中文编码.md  C++20 Concepts.md  C++书籍.md  C++文件读写详解.md  CRTP 奇异递归模板模式.md  Clion 中使用 Intel OneAPI 的同时使用 Ninja 作为构建工具.md  Constant expressions.md  Constraints and concepts.md  Coroutine 协程.md  Fold expression.md  Forwarding Reference & Universal Reference.md  Forwarding Reference 的中 T 的推导结果.md  Order of construction.md  PIMPL.md  Promise 模型.md  RTTI.md  STL体系结构.md  STL接口.md  Singleton template.md  Structured binding.md  addressof.md  async、await 模型.md  bind.md  cast.md  decltype.md  deque.md  doxygen 格式的注释.md  enable_if.md  enable_shared_from_this.md  exception.md  function.md  inline.md  lambda.md  make_unique是如何区分模板参数为有界数组和无界数组的.md  mangling 符号重整.md  memory model.md  move & forward.md  new delete.md  (+62 more)
100Programming/: C++20 Concepts.md
100Programming/mvp/: CMakeLists.txt  ClassDiagram.puml  ConsoleLoginView.h  LoginModelImpl.h  LoginPresenter.cpp  LoginPresenter.h  MockLoginModel.h
110cpp/: C++20 Concepts.md  Constant expressions.md  Constraints and concepts.md  Fold expression.md  Forwarding Reference & Universal Reference.md  addressof.md  constexpr.md  (+10 more)
(+909 files in other folders)
